ajout des image

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 #fiche {
-  border: 2px solid black; }
+  border: 2px black; }
+  #fiche_titre {
+    text-transform: capitalize;
+    margin-top: 0; }
+  #fiche_body {
+    margin-bottom: 0; }
+  #fiche_btn {
+    margin-top: 2px; }
 
-.fiche_titre {
-  text-transform: capitalize;
-  margin-top: 0; }
-.fiche_body {
-  margin-bottom: 0; }
-.fiche_btn {
-  margin-top: 2px; }
+#img1 {
+  width: 200px;
+  height: 165px; }
 
 /*# sourceMappingURL=style.css.map */
