--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,24 @@
+body {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+}
+#titrePage {
+  margin-left: 5%;
+}
+main {
+  width: 100%;
+}
 #fiche {
-  border: 2px black;
+  border: 2px solid black;
+  width: 90%;
+  margin-left: 5%;
+  height: auto;
+  border: 0%;
+  margin-bottom: 20px;
   &_titre {
     text-transform: capitalize;
     margin-top: 0;
@@ -12,6 +31,7 @@
   }
 }
 #img1 {
-  width: 200px;
+  width: 100%;
   height: 165px;
+  object-fit: cover;
 }
