--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,47 @@
+@font-face {
+  font-family: "indie";
+  src: url(../font/Indie_Flower/IndieFlower-Regular.ttf); }
+@font-face {
+  font-family: "styleScript";
+  src: url(../font/Style_Script/StyleScript-Regular.ttf); }
+@font-face {
+  font-family: "daughter";
+  src: url(../font/Architects_Daughter/ArchitectsDaughter-Regular.ttf); }
 body {
   width: 100%;
   height: auto;
   margin: 0;
   width: 100%;
   text-align: center;
-  font-size: 1rem; }
+  font-size: 1rem;
+  background: #c4cccc; }
+
+header {
+  background: #1d2528; }
 
 #titrePage {
-  margin-left: 5%; }
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 5%;
+  height: 50px;
+  font-family: "daugther";
+  color: #c69b6d;
+  font-size: 2.3rem; }
 
 main {
-  width: 100%; }
+  width: 100%;
+  margin-top: 50px; }
 
 #fiche {
-  border: 2px solid black;
+  border: 1px solid black;
   width: 90%;
   margin-left: 5%;
   height: auto;
   border: 0%;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  background-color: #efece8;
+  box-shadow: 4px 4px 6px #aaa;
+  border-radius: 15px; }
   #fiche_titre {
     text-transform: capitalize;
     margin-top: 0; }
@@ -30,6 +53,11 @@ main {
 #img1 {
   width: 100%;
   height: 165px;
-  object-fit: cover; }
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px; }
+
+#produit_lien {
+  text-decoration: none;
+  border: 2px solid teal; }
 
 /*# sourceMappingURL=style.css.map */
