j'ai reussi a afficher mes article dans le panier

--- a/css/style.css
+++ b/css/style.css
@@ -75,4 +75,7 @@ main {
   text-decoration: none;
   color: #1d2528; }
 
+.container-panier_article {
+  border: solid; }
+
 /*# sourceMappingURL=style.css.map */
