--- a/css/style.scss
+++ b/css/style.scss
@@ -81,3 +81,8 @@ main {
   text-decoration: none;
   color: #1d2528;
 }
+//----------------------------- Page panier-------------
+
+.container-panier_article {
+  border: solid;
+}
