--- a/css/style.scss
+++ b/css/style.scss
@@ -100,3 +100,66 @@ main {
     padding-bottom: 5px;
   }
 }
+
+//------------------------------Page formulaire------------------------------------
+
+#form-container {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+//-----------------model video---------------------------
+
+label {
+  letter-spacing: 1px;
+}
+input[type="text"] {
+  margin: 7px 0 7px;
+  border: 1px solid transparent;
+  background: rgb(235, 244, 242);
+  height: 36px;
+  width: 60%;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 9px;
+  font-size: 1.1rem;
+  padding-left: 10px;
+  transition: 0.2s;
+}
+input[type="text"]:focus {
+  border: 1px solid #5ef9a4;
+}
+span {
+  margin-bottom: 20px;
+  display: block;
+  font-size: 0.8rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+  color: red;
+}
+
+#security span {
+  display: inline;
+}
+input[type="submit"] {
+  border: none;
+  background: linear-gradient(65deg, #16d9e7, #5ef9a4);
+  width: 50%;
+  margin: 12px auto 0;
+  padding: 10px;
+  border-radius: 150px;
+  font-size: 1.2rem;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.error input {
+  color: red;
+  border: 1px solid rgba(255, 0, 0, 0.527);
+}
+.error span {
+  visibility: visible;
+  opacity: 1;
+  color: red;
+}
