--- a/css/style.css
+++ b/css/style.css
@@ -16,28 +16,45 @@ body {
   font-size: 1rem;
   background: #c4cccc; }
 
-header {
-  background: #1d2528; }
-
-#titrePage {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 5%;
-  height: 50px;
-  font-family: "daugther";
-  color: #c69b6d;
-  font-size: 2.3rem; }
+#header {
+  background: #1d2528;
+  margin-bottom: 25px; }
+  #header-h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 5%;
+    height: 50px;
+    font-family: "daugther";
+    color: #c69b6d;
+    font-size: 2.3rem; }
+  #header-nav {
+    width: 100%;
+    padding-bottom: 5px;
+    display: flex; }
+  #header-lienPanier {
+    display: flex;
+    width: 33%;
+    margin-left: 5%;
+    border: 2px solid teal;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    background: #c69b6d;
+    border-radius: 2px;
+    text-decoration: none;
+    color: black;
+    justify-content: center; }
 
 main {
   width: 100%;
   margin-top: 50px;
+  justify-content: space-around;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around; }
+  flex-direction: column;
+  align-items: center; }
 
 #fiche {
   border: 1px solid black;
-  width: 40%;
+  width: 80%;
   height: auto;
   border: 0%;
   margin-bottom: 40px;
@@ -56,8 +73,8 @@ main {
 
 .btnIndex {
   border: 2px solid teal;
-  width: 40%;
-  margin-left: 30%;
+  width: 50%;
+  margin-left: 25%;
   margin-bottom: 20px;
   margin-top: 20px;
   padding-bottom: 5px;
