mise en forme du footer

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,22 @@ main {
   text-decoration: none;
   color: #1d2528; }
 
+.footer {
+  background: #1d2528; }
+  .footer-ul {
+    display: flex;
+    padding-left: 0px;
+    justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 30px;
+    padding-bottom: 30px; }
+    .footer-ul_li {
+      list-style: none;
+      margin-right: 20px;
+      color: #c69b6d;
+      font-size: 1.2rem; }
+
 .container-panier_article {
   border: solid 1px;
   margin: 10px;
