correction des erreur w3c

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ body {
   font-size: 1rem;
   background: #c4cccc;
 }
-#header {
+.header {
   background: #1d2528;
   margin-bottom: 25px;
   box-shadow: 2px 2px 14px #1d2528;
