--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,11 @@ body {
   font-size: 1rem;
   background: #c4cccc; }
 
-#header {
+.header {
   background: #1d2528;
   margin-bottom: 25px;
   box-shadow: 2px 2px 14px #1d2528; }
-  #header-h1 {
+  .header-h1 {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 5%;
@@ -28,11 +28,11 @@ body {
     font-family: "daugther";
     color: #c69b6d;
     font-size: 2.3rem; }
-  #header-nav {
+  .header-nav {
     width: 100%;
     padding-bottom: 5px;
     display: flex; }
-  #header-lienPanier {
+  .header-lienPanier {
     display: flex;
     width: 33%;
     margin-left: 5%;
