--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ main {
   border: 1px solid black;
   width: 80%;
   height: auto;
-  border: 0%;
+  border: 0;
   margin-bottom: 40px;
   background-color: #efece8;
   box-shadow: 4px 4px 6px #aaa;
