--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,10 @@ main {
   margin-top: 2rem;
   text-align: center; }
 
+form {
+  width: 70%;
+  margin-left: 15%; }
+
 label {
   letter-spacing: 1px; }
 
@@ -143,7 +147,7 @@ input[type="text"] {
   border: 1px solid transparent;
   background: #ebf4f2;
   height: 36px;
-  width: 60%;
+  width: 100%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 9px;
   font-size: 1.1rem;
@@ -185,6 +189,12 @@ input[type="submit"] {
 .error span {
   visibility: visible;
   opacity: 1;
+  color: red; }
+
+.text-success {
+  color: green; }
+
+.text-danger {
   color: red; }
 
 /*# sourceMappingURL=style.css.map */
