--- a/css/style.scss
+++ b/css/style.scss
@@ -158,6 +158,10 @@ main {
   margin-top: 2rem;
   text-align: center;
 }
+form {
+  width: 70%;
+  margin-left: 15%;
+}
 
 //-----------------model video---------------------------
 
@@ -169,7 +173,7 @@ input[type="text"] {
   border: 1px solid transparent;
   background: rgb(235, 244, 242);
   height: 36px;
-  width: 60%;
+  width: 100%;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 9px;
   font-size: 1.1rem;
@@ -213,5 +217,14 @@ input[type="submit"] {
 .error span {
   visibility: visible;
   opacity: 1;
+  color: red;
+}
+
+//regexp
+.text-success {
+  color: green;
+}
+
+.text-danger {
   color: red;
 }
