--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,6 @@
 @font-face {
-  font-family: "indie";
-  src: url(../font/Indie_Flower/IndieFlower-Regular.ttf); }
-@font-face {
-  font-family: "styleScript";
-  src: url(../font/Style_Script/StyleScript-Regular.ttf); }
-@font-face {
-  font-family: "daughter";
-  src: url(../font/Architects_Daughter/ArchitectsDaughter-Regular.ttf); }
+  font-family: "rampart";
+  src: url(../font/Rampart_One/RampartOne-Regular.ttf); }
 body {
   width: 100%;
   height: auto;
@@ -25,22 +19,24 @@ body {
     margin-bottom: 1rem;
     margin-left: 5%;
     height: 50px;
-    font-family: "daugther";
+    font-family: "rampart";
     color: #c69b6d;
-    font-size: 2.3rem; }
+    font-size: 2.3rem;
+    font-size: 2.5rem;
+    letter-spacing: 0.3rem; }
   .header-nav {
     width: 100%;
-    padding-bottom: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly; }
   .header-lienPanier {
     display: flex;
-    width: 33%;
+    width: 100%;
     margin-left: 0;
+    margin-bottom: 1px;
     padding-bottom: 5px;
     padding-top: 5px;
     background: #c69b6d;
-    border-radius: 2px;
     text-decoration: none;
     color: black;
     justify-content: center; }
