--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,22 @@
   font-family: "rampart";
   src: url(../font/Rampart_One/RampartOne-Regular.ttf);
 }
+@font-face {
+  font-family: "dosis";
+  src: url(../font/Dosis/Dosis-VariableFont_wght.ttf);
+}
+@font-face {
+  font-family: "hina";
+  src: url(../font/Hina_Mincho/HinaMincho-Regular.ttf);
+}
+@font-face {
+  font-family: "klee";
+  src: url(../font/Klee_One/KleeOne-Regular.ttf);
+}
+@font-face {
+  font-family: "comfortaa";
+  src: url(../font/Comfortaa/Comfortaa-VariableFont_wght.ttf);
+}
 body {
   width: 100%;
   height: auto;
@@ -43,6 +59,7 @@ body {
     text-decoration: none;
     color: black;
     justify-content: center;
+    font-family: "comfortaa";
   }
 }
 
@@ -68,14 +85,19 @@ main {
   &_titre {
     text-transform: capitalize;
     margin-top: 10px;
+    font-family: "dosis";
   }
   &_body {
     margin-bottom: 0;
     width: 90%;
     margin-left: 5%;
+    font-family: "hina";
   }
   &_btn {
     margin-top: 2px;
+  }
+  &_prix {
+    font-family: "klee";
   }
 }
 .btnIndex {
@@ -88,6 +110,7 @@ main {
   padding-top: 5px;
   background: #c69b6d;
   border-radius: 10px;
+  font-family: "dosis";
 }
 #img1 {
   width: 100%;
@@ -120,6 +143,8 @@ main {
       color: #c69b6d;
       font-size: 1.2rem;
       padding-bottom: 10px;
+      font-family: "dosis";
+      cursor: pointer;
     }
   }
 }
