--- a/css/style.scss
+++ b/css/style.scss
@@ -124,6 +124,7 @@ main {
 }
 #btnEnvoyer {
   margin-bottom: 20px;
+  font-family: "comfortaa";
 }
 //----------------------------Footer--------------------
 .footer {
