--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@
 @font-face {
   font-family: "comfortaa";
   src: url(../font/Comfortaa/Comfortaa-VariableFont_wght.ttf); }
+.gras {
+  font-weight: bold;
+  font-size: x-large; }
+
 body {
   width: 100%;
-  height: auto;
+  height: 100%;
   margin: 0;
   width: 100%;
   text-align: center;
@@ -30,7 +34,7 @@ body {
     margin-top: 0;
     margin-bottom: 1rem;
     margin-left: 5%;
-    height: 50px;
+    height: 70px;
     font-family: "rampart";
     color: #c69b6d;
     font-size: 2.3rem;
@@ -46,8 +50,8 @@ body {
     width: 100%;
     margin-left: 0;
     margin-bottom: 1px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding-bottom: 15px;
+    padding-top: 15px;
     background: #c69b6d;
     text-decoration: none;
     color: black;
@@ -112,7 +116,8 @@ main {
   margin-bottom: 20px;
   font-family: "comfortaa"; }
 
-h2 {
+h2,
+h3 {
   font-family: "comfortaa";
   text-align: start;
   font-size: 1.1rem;
@@ -238,7 +243,9 @@ input[type="submit"] {
   padding-bottom: 10px; }
 
 .footer {
-  background: #1d2528; }
+  background: #1d2528;
+  bottom: 0;
+  width: 100%; }
   .footer-ul {
     display: flex;
     padding-left: 0px;
