--- a/css/style.scss
+++ b/css/style.scss
@@ -228,7 +228,7 @@ input[type="submit"] {
   border: solid 1px black;
   background: #c69b6d;
   width: auto;
-  margin: 12px auto 0;
+  margin-top: 30px;
   padding: 10px;
   border-radius: 10px;
   font-size: 1.2rem;
@@ -282,7 +282,7 @@ input[type="submit"] {
   background: #1d2528;
   width: 100%;
   position: absolute;
-  //bottom: 0;
+  //bottom: 0%;
   left: 0;
   &-ul {
     display: flex;
@@ -302,5 +302,23 @@ input[type="submit"] {
       font-family: "dosis";
       cursor: pointer;
     }
+  }
+}
+// Media Querie
+@media screen and (min-width: 600px) {
+  //Photo de l'apareil dans la page produit.html
+  #img1 {
+    height: 300px;
+  }
+  .footer-ul {
+    flex-direction: initial;
+    &_li {
+      margin-right: 40px;
+    }
+  }
+  //Page Panier
+  #container-produits-panier {
+    width: 80%;
+    margin-left: 10%;
   }
 }
