--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
   font-weight: bold;
   font-size: x-large; }
 
+a {
+  text-decoration: none; }
+
 body {
   width: 100%;
   height: 100%;
@@ -33,7 +36,6 @@ body {
   .header-h1 {
     margin-top: 0;
     margin-bottom: 1rem;
-    margin-left: 5%;
     height: 70px;
     font-family: "rampart";
     color: #c69b6d;
