--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,9 @@
   font-weight: bold;
   font-size: x-large;
 }
+a {
+  text-decoration: none;
+}
 body {
   width: 100%;
   height: 100%;
@@ -40,7 +43,6 @@ body {
   &-h1 {
     margin-top: 0;
     margin-bottom: 1rem;
-    margin-left: 5%;
     height: 70px;
     font-family: "rampart";
     color: #c69b6d;
